# dbcalm-open-docs

./: .readthedocs.yaml  BUILD.md  LICENSE  Makefile  README.md  api-specification.rst  conf.py  configuration.rst  developer-guide.rst  index.rst  installation.rst  pyproject.toml
agent/: index.rst
dbcalm_marketing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
open/: Makefile  conf.py  index.rst
open/api/: api-specification.rst  developer-guide.rst  index.rst  installation.rst  openapi.json
open/frontend/: index.rst
