[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbcalm-marketing"
version = "0.0.1"
description = "DBCalm marketing website and documentation"
requires-python = ">=3.11"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-redoc>=1.6.0",
    "myst-parser>=2.0.0",
    "sphinx-autobuild>=2021.3.14",
    "setuptools",
]
